--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Vanessa Rusu - A small creative studio helping entrepreneurs and small businesses with visual branding and web development</title>
+    <title>Vanessa Rusu digital design and web development studio based near Vancouver, BC</title>
 
 
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript aria-hidden="true">You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
