Services Page updates

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-		<meta name="description" content="A design and development studio dedicated to helping startups, side hustlers & entrepreneurs level up their brand so they can grow their business.">
+		<meta name="description" content="A visual design and web development studio that builds solutions you can actually use to grow your business. Based in Burnaby British Columbia, serving clients throughout North America">
 		<meta name="keywords" content="design, development, side hustle, entrepreneur, startup, tech, website, web design, web development, brand strategy, branding, seo, wordpress, squarespace, vancouver, ontario, canada">
     <meta name="robots" content="index, follow">
     
@@ -18,10 +18,10 @@
 		<meta property="og:locale" content="en_US" />
 		
 		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Vanessa Rusu - A web design and development studio" />
-		<meta property="og:description" content="A design and development studio dedicated to helping startups, side hustlers & entrepreneurs level up their brand so they can grow their business." />
+		<meta property="og:title" content="Vanessa Rusu Digital Studio - A visual design and web development studio" />
+		<meta property="og:description" content="A visual design and web development studio that builds solutions you can actually use to grow your business. Based in Burnaby British Columbia, serving clients throughout North America" />
 		<meta property="og:url" content="https://vanessarusu.com" />
-    <meta property="og:site_name" content="Vanessa Rusu" />
+    <meta property="og:site_name" content="Vanessa Rusu Digital Studio - A visual design and web development studio" />
     
 
 
