adding social profile snippet for google my business listing

--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Vanessa Rusu Digital Studio",
+        "url": "https://vanessarusu.com",
+        "sameAs": ["https: //www.instagram.com/vanessarusu.studio",
+          "https: //www.linkedin.com/company/vanessa-rusu"
+        ]
+      }
+    </script>
   </body>
 </html>
